[package]
name="rustlin-client"
version="0.0.1"
authors=["Thomas Epperson"]
edition="2021"

[dependencies]
bytes="1.1.0"
configparser = "3.0.0"
des="0.8.1"
generic-array="0.14.5"
async-trait="0.1.56"

[dependencies.tokio]
version="1.19.2"
features=["full"]

[dependencies.sdl2]
version="0.35.2"
features=["use_mac_framework", "image", "ttf"]

[dependencies.common]
version = "^0"
path="../common"

[[bin]]
name="rustlin-client"
path="src/main.rs"

[[bin]]
name="game_explorer"
path="src/explorer.rs"
