[package]
name="rustlin-client"
version="0.0.1"
authors=["Thomas Epperson"]
edition="2021"

[dependencies]
bytes="1.6.0"
crypto-common = "0.1.3"
omnom = "3.0.0"
des="0.8.1"
async-trait="0.1.80"
stacker="0.1.15"
rand = "0.8.5"
toml = "0.8.14"

[dependencies.sdl2]
version="0.36.0"
features=["use_mac_framework", "image", "ttf", "mixer"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version="1.38.0"
features=["full"]

[dependencies.common]
version = "^0"
path="../common"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="map_bench"
path="src/map_bench.rs"
harness = false

[[bin]]
name="rustlin-client"
path="src/main.rs"

[[bin]]
name="game_explorer"
path="src/explorer.rs"
