[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.19"
rand="0.8.4"

[dependencies.tokio]
version = "1.15.0"
features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync", "io-util"]


