[package]
name="rustlin-server"
version = "0.0.1"
authors = ["Thomas Epperson"]
edition="2018"

[dependencies]
futures="0.3.30"
rand="0.8.5"
mysql_async="0.34.1"
regex = "1.10.5"
chrono="0.4.38"
rust-crypto="0.2.36"
toml = "0.8.14"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync", "io-util"]

[dependencies.common]
version = "^0"
path="../common"

[[bin]]
name = "rustlin-server"
path = "src/main.rs"
