[package]
name="rustlin-server"
version = "0.0.1"
authors = ["Thomas Epperson"]
edition="2018"

[dependencies]
chrono="0.4.38"
enum_dispatch = "0.3.13"
futures="0.3.30"
log = "0.4.27"
mysql_async="0.36.1"
rand="0.8.5"
regex = "1.10.5"
rust-crypto="0.2.36"
simple_logger = "5.0.0"
toml = "0.8.14"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync", "io-util"]

[dependencies.common]
version = "^0"
path="../common"

[[bin]]
name = "rustlin-server"
path = "src/main.rs"
