[package]
name="rustlin-server"
version = "0.0.1"
authors = ["Thomas Epperson"]
edition="2018"

[dependencies]
chrono="0.4.38"
enum_dispatch = "0.3.13"
futures="0.3.30"
log = "0.4.27"
mysql = "26.0.1"
parking_lot = "0.12.4"
rand="0.8.5"
regex = "1.10.5"
rust-crypto="0.2.36"
simple_logger = "5.0.0"
stacker="0.1.15"
toml = "0.8.14"

[dependencies.console-subscriber]
version = "0.4.1"
features = ["parking_lot"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.47.1"
features = ["tracing", "rt-multi-thread", "fs", "net", "time", "macros", "signal", "sync", "io-util"]

[dependencies.common]
version = "^0"
path="../common"

[[bin]]
name = "rustlin-server"
path = "src/main.rs"
